# BareTLS-1.2-Handshake-and-Edge-Security

./: CMakeLists.txt  README.md  SAMPLE_OUTPUT.txt  desktop.ini
src/: main.cpp  tls_client.cpp  tls_client.hpp
